:sparkles: adicionar formatação de datas

--- a/_posts/store/2024-01-04-forja.markdown
+++ b/_posts/store/2024-01-04-forja.markdown
@@ -1,5 +1,5 @@
 ---
 layout: store
-title: Forja
-google: https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3729.7386959788637!2d-49.387773224975064!3d-20.801856680791307!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94bdadc4eb05cea3%3A0xd296190281afc356!2sEpic%20Level!5e0!3m2!1spt-BR!2sbr!4v1758723770331!5m2!1spt-BR!2sbr
+title: Forja Hobby Store
+google: https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3729.627735207421!2d-49.480329224975165!3d-20.80634308078784!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94bdaf84eee4b9ef%3A0x812d16d46d1ec904!2sForja%20Hobby%20Store!5e0!3m2!1spt-BR!2sbr!4v1758739039464!5m2!1spt-BR!2sbr
 ---
