:lipstick: Adicionar informações para eventos

--- a/_posts/digimon/2025-10-19-digimon_epic_10_19.markdown
+++ b/_posts/digimon/2025-10-19-digimon_epic_10_19.markdown
@@ -1,7 +1,7 @@
 ---
 layout: event
 date: 2025-10-19 14:30:00 -0300
-title: Release Event (BT23)
+type: Release Event - BT23
 store: Epic Level
 categories:
   - digimon
