--- a/_posts/digimon/2025-10-05-digimon_epic_10_05.markdown
+++ b/_posts/digimon/2025-10-05-digimon_epic_10_05.markdown
@@ -1,7 +1,7 @@
 ---
 layout: event
 date: 2025-10-05 14:00:00 -0300
-title: Campeonato (Evo Cup)
+type: Evolution Cup
 store: Epic Level
 categories:
   - digimon
