--- a/_posts/gundam/2025-10-26-gundam_epic_10_26.markdown
+++ b/_posts/gundam/2025-10-26-gundam_epic_10_26.markdown
@@ -1,7 +1,7 @@
 ---
 layout: event
 date: 2025-10-26 14:30:00 -0300
-title: GD2 Release
+type: GD2 Release
 store: Epic Level
 categories:
   - gundam
