--- a/_posts/store/2024-01-04-forja.markdown
+++ b/_posts/store/2024-01-04-forja.markdown
@@ -2,6 +2,7 @@
 layout: store
 title: Forja Hobby Store
 address: Av. José Ricci, 114 - Lot. Industrial Eng. Newton Flavio Silva Pinto, Mirassol - SP, 15134-128
+city: Mirassol
 google: https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3729.627735207421!2d-49.480329224975165!3d-20.80634308078784!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94bdaf84eee4b9ef%3A0x812d16d46d1ec904!2sForja%20Hobby%20Store!5e0!3m2!1spt-BR!2sbr!4v1758739039464!5m2!1spt-BR!2sbr
 categories:
   - digimon
